removed images from writing page - causing issues on firefox

--- a/style.css
+++ b/style.css
@@ -169,14 +169,14 @@ td {
 }
 
 .writing-container {
-    display: flex;
-    padding: 48px 124px 0px 124px;
+    padding: 48px 32% 0px 32%;
     justify-content: center;
-}
 
+}
+/* 
 .writing-img {
     width: 25%;
-}
+} */
 
 .writing-title {
     margin-top: 0px;
@@ -194,6 +194,7 @@ td {
     margin-top: 0px;
     margin-left: 24px;
     margin-right: 48px;
+    margin-bottom: 64px;
 }
 
 .books-row {
